allow an user to be enforced to use 2fa
